--- a/product.html
+++ b/product.html
@@ -18,12 +18,12 @@
       <h1>My Super SaaS</h1>
     </header>
     <nav>
-      <ul>
-        <li><a href="#Home">Home</a></li>
-        <li><a href="#Tour">Tour</a></li>   
-        <li><a href="#Pricing">Pricing</a></li>
-        <li><a href="#About">About</a></li>
-        <li><a href="#Contact">Contact</a></li>
+      <ul class = "nav">
+        <li class = "nav-list"><a href="#Home">Home</a></li>
+        <li class = "nav-list"><a href="#Tour">Tour</a></li>   
+        <li class = "nav-list"><a href="#Pricing">Pricing</a></li>
+        <li class = "nav-list"><a href="#About">About</a></li>
+        <li class = "nav-list"><a href="#Contact">Contact</a></li>
       </ul>
       <br clear="all">
     </nav>
@@ -89,14 +89,30 @@
      </div>
      <div id="pricing"><a id = "Pricing"></a>
       <h2>Pricing</h2>
-      <dl>
-        <dt>Basic</dt>
-        <dd>$19.99 / mo.</dd>
-        <dt>Pro</dt>
-        <dd>$39.99 / mo.</dd>
-        <dt>Platinum</dt>
-        <dd>$99.99 / mo.</dd>
-      </dl>
+
+
+      <div class = "column">
+        <h3>Basic - $19.99 / mo.</h3>
+        <br>
+          <li>Some Feature</li>
+          <li>Some Feature</li>
+          <li>Some Feature</li>
+      </div>
+      <div class = "column">
+        <h3>Pro - $39.99 / mo.</h3>
+        <br>
+          <li>Some Feature</li>
+          <li>Some Feature</li>
+          <li>Some Feature</li>
+      </div>
+      <div class = "column">
+        <h3>Platinum - $99.99 / mo.</h3>
+        <br>
+          <li>Some Feature</li>
+          <li>Some Feature</li>
+          <li>Some Feature</li>
+      </div>
+
     </div>
     <div id="about">
       <a id = "About"></a>
